<resources>
    <string name="app_name">SportsONbeta</string>
    <string name="loginText">Email or cell phone number</string>
    <string name="passText">Password</string>
    <string name="us">User</string>
    <string name="passTem">12345678</string>
    <string name="btn1">Log in</string>
    <string name="btn2">Create New Account</string>
    <string name="space"> ------------ Or ------------ </string>
    <string name="reg">Register</string>
    <string name="name">Full name and last name</string>
    <string name="email">Email</string>
    <string name="cel">Cell phone</string>
    <string name="Age">Age</string>
    <string name="Sex">Sex</string>
    <string name="Wo">Woman</string>
    <string name="Ma">Man</string>
    <string name="nex">Next</string>
    <string name="pass1">New password</string>
    <string name="pass2">Confirmation password</string>
    <string name="confir">Email Confirmation</string>
    <string name="confButton">Confirm</string>
    <string name="confirmTex">Insert the confirmation code form you Email address</string>
    <string name="ToastSend"> Sending a confirmation code... </string>
    <string name="EmailTex1"> WELCOME  to SportsOn </string>
    <string name="EmailTex2">your confirmation code is:  </string>
    <string name="Ip">http://192.168.1.6</string>
    <string name="title_activity_sesion_">sesion_Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

