<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/activity_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.sportson.sportsonbeta.Intro"
        android:background="@color/colorBone">

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/ppp"
            android:id="@+id/img1"
            android:layout_height="120dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:id="@+id/user"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/loginText"
                android:text="@string/loginText"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="18sp"
                android:typeface="normal"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:gravity="bottom|center_vertical"
                android:elevation="1dp"
                android:layout_height="70dp" />
            <!-- em -> cantidad de caracteres-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:ems="20"
                android:gravity="center"
                android:background="@android:color/white"
                android:layout_gravity="bottom"
                android:selectAllOnFocus="true"
                android:id="@+id/Us"
                android:hint="@string/us" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pass">

            <TextView
                android:text="@string/passText"
                android:layout_width="match_parent"
                android:id="@+id/passTex"
                android:gravity="bottom|center_horizontal"
                android:typeface="normal"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal|bold"
                android:textColor="@android:color/black"
                android:layout_height="70dp" />

            <EditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:background="@android:color/white"
                android:layout_height="50dp"
                android:selectAllOnFocus="true"
                android:id="@+id/PassU"
                android:hint="@string/passTem" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bott">

            <Button
                android:text="@string/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_inicio"
                android:textColor="@android:color/white"
                android:background="?android:attr/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/spaceTex"
                android:text="@string/space"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@android:color/black" />
            <Button
                android:text="@string/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_reg"
                android:textColor="@android:color/white"
                android:background="?android:attr/colorPrimaryDark" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>
