<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sportson.sportsonbeta.confirmation"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:titleTextColor="@android:color/white"
                app:subtitleTextColor="@android:color/white"
                app:theme="@style/ToolbarColoredBackArrow"
                app:title="@string/confir" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:text="@string/confirmTex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:fontFamily="serif"
                android:textSize="18sp"
                android:textColor="@android:color/black" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/ccode" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:text="@string/confButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_conf" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

        </LinearLayout>

</ScrollView>
